--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
         roomVersion = '2.2.5'
         fragmentVersion = '1.2.5'
         lifecycleVersion = '2.2.0'
-        androidXCoreVersion = '2.1.0'
+        androidXArchTestVersion = '2.0.0'
         paletteKtxVersion = '1.0.0'
         jsonhandleviewVersion = '1.2.2'
 
         // Networking
         gsonVersion = '2.8.6'
-        okhttp3Version = '3.12.10'
-        retrofitVersion = '2.6.4'
+        okhttp3Version = '4.9.0'
+        retrofitVersion = '2.9.0'
 
         // Debug and quality control
         detektVersion = '1.14.0'
@@ -29,8 +29,8 @@ buildscript {
 
         // Testing
         androidxTestCoreVersion = '1.3.0'
-        junitGradlePluignVersion = '1.6.2.0'
-        junitVersion = '5.7.0'
+        junitGradlePluignVersion = '1.6.1.0'
+        junitVersion = '5.5.2'
         mockkVersion = '1.10.2'
         robolectricVersion = '4.4'
         truthVersion = '1.1'
@@ -82,7 +82,7 @@ task clean(type: Delete) {
 }
 
 ext {
-    minSdkVersion = 16
+    minSdkVersion = 21
     targetSdkVersion = 30
     compileSdkVersion = 30
 }
