--- a/library-no-op/build.gradle
+++ b/library-no-op/build.gradle
@@ -15,6 +15,13 @@ android {
         minSdkVersion rootProject.minSdkVersion
     }
 
+    android {
+        compileOptions {
+            sourceCompatibility 1.8
+            targetCompatibility 1.8
+        }
+    }
+
     lintOptions {
         warningsAsErrors true
         abortOnError true
